--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,9 +1,10 @@
 name: ci
 on:
   push:
-    branches: [main]
+    branches:
+      - "*"
   pull_request:
-    branches: [main]
+    types: [opened,synchronize,reopened]
   workflow_dispatch: {} # support manual runs
 # Prevent writing to the repository using the CI token.
 # Ref: https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#permissions
@@ -15,16 +16,12 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
         with:
-          fetch-depth: 1
-      - name: Install Go
-        uses: actions/setup-go@v3
-        with:
-          go-version: 1.18
-      - name: Install Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
-      - name: Generate
-        run: make generate && make checkgenerate
-      - name: Build
-        run: make build && make checkgenerate
+          fetch-depth: 0
+      - uses: sonarsource/sonarqube-scan-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+      - uses: sonarsource/sonarqube-quality-gate-action@master
+        timeout-minutes: 5
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
